# AMCDC

./: .gitignore  CHANGELOG.md  README.md  arg_parser.py  example_input.yaml  initial_data.npz  output.h5  setup.cfg  setup.py
examples/slabs/moments/: data_creation.py  input.py  process.py
examples/slabs/uniform_source/: input.py
mcdc/: __init__.py  __main__.py  arg_parser.py  distribution.py  input.py  input_parser.py  mcdc_input.py  output.h5  pct.py  simulator.py  tally.py
mcdc/examples/: .gitignore
mcdc/examples/infinite_multigroup/SHEM-361_alpha_TODO/: input.py
mcdc/examples/slabs/moments/: data_creation.py  input.py
mcdc/examples/slabs/uniform_source/: input.py
mcdc/tests_tmp/: slab_beam.py  test_regression_moments.npz  test_regression_moments.py  test_regression_moments_solution_h5  test_regression_multigroup_SHEM361_k.py  test_regression_slab_beam.py  test_regression_slab_uniform.py
tests_tmp/: test_regression_moments.py  test_regression_multigroup_G12_k.py  test_regression_multigroup_SHEM361_k.py  test_regression_slab_azurv1pl.py  test_regression_slab_uniform.py
