[aliases]
test=pytest

[metadata]
license_file = LICENSE
name = mcdc
version = 0.1.2.4
author = Ilham Juanda
author_email = ijuanda@nd.edu
description = A Neutron transport Monte Carlo code
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English